Change website icon, fix spacing, add open folder tooltip

--- a/src/scss/mods/modsAvailableInstalled.scss
+++ b/src/scss/mods/modsAvailableInstalled.scss
@@ -234,6 +234,8 @@
         }
 
         .icon-folder {
+          padding: 0;
+          
           color: $text-light-primary;
 
           &:hover {
